fixed styles to avoid scrolling on small devices

--- a/styles.css
+++ b/styles.css
@@ -217,7 +217,12 @@ body {
 
 @media (max-width: 480px) {
   .pokemon-details {
-    height: 95%;
     width: 95%;
+    height: 95%;
+    max-height: 95%;
+    max-width: 95%;
+  }
+  .body {
+    padding-top: 2rem;
   }
 }
